--- a/aug.css
+++ b/aug.css
@@ -1,12 +1,12 @@
-section[class^="container"] {
-  padding: 72px;
+section [class^="container"] {
+  padding: 4rem 2rem;
 }
 
 @media screen and (min-width: 1024px) {
-  section[class^="container"] {
+  section [class^="container"] {
     padding: 4rem;
   }
-  nav[class^="container"] {
+  nav [class^="container"] {
     padding: 0 4rem;
   }
 }
@@ -19,6 +19,28 @@ section:nth-child(2n) {
   background-color: #ecf2ff;
 }
 
+a {
+  color: black;
+  text-decoration: none;
+}
+
+a:hover {
+  color: var(--accent-color);
+}
+
+section .card,
+.btn-outline-dark {
+  border: 2px solid black;
+  box-shadow: 4px 4px black;
+  max-width: 22rem;
+  margin-inline: auto;
+  transition: all 0.4s;
+}
+
+.btn-outline-dark:hover {
+  box-shadow: 4px 4px #f9a31c;
+}
+
 /*NAVBAR*/
 
 .navbar {
@@ -27,7 +49,13 @@ section:nth-child(2n) {
 .navbar-nav .nav-link {
   color: black;
   font-size: 1.1rem;
+  transition: all 0.5s;
 }
+
+.navbar-nav .nav-link:hover {
+  color: #f9a31c;
+}
+
 @media screen and (min-width: 1024px) {
   .navbar-nav .nav-item {
     padding: 0 1rem;
@@ -63,18 +91,9 @@ section.services i {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #f9a31c;
 }
 
-section .card,
-.btn-outline-dark {
-  border: 2px solid black;
-  box-shadow: 4px 4px black;
-  max-width: 22rem;
-  margin-inline: auto;
-}
-.btn-outline-dark:hover {
-  box-shadow: 4px 4px #f9a31c;
-}
 section .card {
   max-width: 22rem;
   margin-inline: auto;
@@ -108,6 +127,8 @@ section.testimonials .carousel-control-prev,
 
 section.testimonials .carousel-item p {
   max-width: 80%;
+  border-left: 5px solid #f9a31c;
+  padding-left: 1rem;
 }
 
 section.testimonials .carousel-item {
@@ -119,4 +140,14 @@ section.testimonials .carousel-item {
 
 section.testimonials .carousel.carousel-fade .carousel-item {
   transition: opacity 0.5s;
+}
+
+/*CONTACT*/
+
+section.contact .social-media a {
+  padding: 0 0.5rem;
+  font-size: 1.3rem;
+}
+section.contact .row:hover {
+  color: #f9a31c;
 }
